--- a/donation.html
+++ b/donation.html
@@ -86,11 +86,23 @@
                         Most Recent Donation
                     </div>
                     <div class="card-body" id="recent-member">
-                        <h2 id="name-display">Mark Thompson</h2>
-                        <h4 id="email-display">Email: mark@harvardextension.edu</h4>
-                        <h4 id="donation-display">Donation Amount: $</h4>
-                        <p id="comment-display">I'm signing up, because I want to spread Brest Cancer Awareness to the
-                            world.</p>
+                        <h2>
+                            <strong>Name:</strong>
+                            <span id="name-display"></span>
+                        </h2>
+                        <!-- <h4>
+                            <strong>Email:</strong>
+                            <span id="email-display"></span>
+                        </h4> -->
+                        <h4>
+                            <strong>Donation: $</strong>
+                            <span id="donation-amount-display"></span>
+                        </h4>
+                        <!-- <p>
+                            <span id="name-display">
+                                I'm signing up, because I want to spread Brest Cancer Awareness to
+                                the world.</span>
+                        </p> -->
                     </div>
                 </div>
             </div>
