--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Ubuntu+Condensed" rel="stylesheet">
-    <title>About</title>
+    <title>Safe Haven - About</title>
 </head>
 
 <body>
