--- a/about.html
+++ b/about.html
@@ -45,10 +45,10 @@
             <div class="row">
                 <div class="col-md-6">
                     <p class="about">
-                        Our application will be dedicated toward women with cancer who have lost the hair on their head
+                        Safe Haven application will be dedicated toward women with cancer who have lost the hair on their head
                         due to chemotherapy treatment.
                         <br><br>
-                        Our app will also be geared toward people who would like to donate money for
+                        This app will also be geared toward people who would like to donate money for
                         these women.
                     </p>
                 </div>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col-md-6">
                     <p class="about">
-                        Using our app, users will be able to search for a wig of their liking and our search engine
+                        Using this app, users will be able to search for a wig of their liking and our search engine
                         makes finding a stylist to apply the wig a breeze.
                         <br><br>
                         Users will also have the choice of connecting to YouTube if they prefer to apply their new locks
